Tue Jul 12 09:17:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: remove warning

Mon Jul 11 11:07:07 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sqlfront.h: make php compile again

Mon Jul 11 11:04:34 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sqlfront.h: do not typedef LPCBYTE twice

Sat Jul  9 22:41:03 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/rpc.c:
	- allow to free all allocated buffers

===================================================================
Sat Jul  9 22:02:19 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy: notes..

Sat Jul  9 21:50:13 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/dblib.h src/dblib/bcp.c src/dblib/dblib.c:
	* src/tds/gssapi.c:
	- minor types improves

Sat Jul  9 13:26:00 CDT 2011     Craig A. Berry <craigberry@mac.com>
	* vms/descrip_mms.template compile getpassarg.c on VMS.

Thu Jul  7 09:24:05 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* Nmakefile include/replacements.h:
	- fix Nmakefile (from Ramiro Morales)

Sat Jul  2 09:53:21 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/gssapi.c: minor changes

Sat Jul  2 09:39:12 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: log authentication method always

Sat Jul  2 09:37:57 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/gssapi.c: fix memory error on error

Fri Jul  1 16:47:38 EDT 2011	JK Lowden <jklowden@freetds.org>
	* src/tds/gssapi.c src/tds/login.c 
	- log kerberos error messages

Wed Jun 29 15:22:37 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/t0004.c: make query longer

Wed Jun 29 15:07:56 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* Nmakefile: updated to reflect file rename
